Fixed sizing issues on tablet size

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -114,10 +114,15 @@ main {
 .icons {
   display: flex;
   flex-direction: row;
-  width: 50vh;
-  height: 40px;
+  width: 80%;
+  max-height: 40px;
+  min-height: 4.5vh;
   justify-content: space-between;
   margin-bottom: 0;
+
+  @media screen and (min-width: 1000px) {
+    max-width: 30%;
+  }
 
   >* {
     border: 3px solid $one;
@@ -125,6 +130,7 @@ main {
     display: flex;
     justify-content: space-around;
     align-content: center;
+
   }
 
   img {
@@ -137,13 +143,15 @@ main {
     display: flex;
     flex-direction: row;
     padding: 0;
+    min-width: 60px;
     cursor: pointer;
-
 
     div {
       border: 1px solid $one;
-      width: 5vh;
-      height: 5vh;
+      max-width: 7vh;
+      min-width: 4vh;
+      max-height: 7vh;
+      min-height: 4vh;
       opacity: 0.5;
       filter: grayscale(100%);
       background-color: $inactiveCell;
@@ -152,11 +160,10 @@ main {
       justify-content: center;
 
       img {
-        padding: 2%;
-
+        height: 100%;
+        width: auto;
       }
     }
-
   }
 
   .toggle .toggled {
@@ -191,7 +198,7 @@ main {
   flex-grow: 1;
   padding: 1%;
   display: flex;
-  max-width: 50%;
+  // max-width: 40%;
   margin: 2% auto 0;
   justify-content: center;
   flex-direction: column;
@@ -220,6 +227,10 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  @media screen and (min-width: 1025px) {
+    top: 55%;
+  }
 
   .button {
     min-width: 10rem;
